@@ -44,6 +44,7 @@ CXXFLAGS = @CXXFLAGS@ @WALL@ @PIPE@ @WNOLONGDOUBLE@ @WNOOVERLOADEDVIRTUAL@
 CFLAGS = @CFLAGS@ @WALL@ @PIPE@ @WNOLONGDOUBLE@ @WNOOVERLOADEDVIRTUAL@
 WERROR = @WERROR@
 WNOUNKNOWNPRAGMAS = @WNOUNKNOWNPRAGMAS@
+WNOMISMATCHEDTAGS = @WNOMISMATCHEDTAGS@
 
 # libtool command
 LIBTOOL = @LIBTOOL@
