@@ -461,6 +461,7 @@ FW_CHECK_PIPE
 FW_CHECK_WERROR
 FW_CHECK_WALL
 FW_CHECK_WNOOVERLOADEDVIRTUAL
+FW_CHECK_WNOMISMATCHEDTAGS
 FW_CHECK_WNOUNKNOWNPRAGMAS
 FW_CHECK_DEBUG
 
