@@ -16,6 +16,7 @@
 	replaced sqlr-stop script with a binary (for Windows)
 	preliminary support for server components on Windows
 	sessionhandler="thread" is now forced on Windows
+	added various compile flags for clang's aggressive -Wall
 
 0.57 - fixed an overloaded virtual function error in sqlr-status
 	fixed parsing of "term as type" clauses in queries
